test/parser/reject/bad-mapping-invalid-token.ptk
# expected: E1109
rule group = "value" => "bad" ;